# QassemRPM

./: Dockerfile  LICENSE  README.md  cli (1).py  cli.py  pyproject.toml  spec.py  tests.yml  validator.py
.github/workflows/: main.yml  tests.yml
docs/: ARCHITECTURE.md
examples/: hello.spec
qassemrpm/: __init__.py  builder.py  cli.py  spec.py  validator.py
tests/: test_builder.py  test_parser.py  test_validator.py
