[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qassemrpm"
version = "0.1.0"
description = "Modern RPM packaging assistant: SPEC parsing, documentation, and containerized builds."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Qassem" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
qassemrpm = "qassemrpm.cli:main"
qrpm = "qassemrpm.cli:main"
